syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.movienode";
option java_outer_classname = "Movienodeprort";


package ServerBody;


service Body {
  rpc GetVideosX (VideoListXRequest) returns (VideoListXReply) {}
  rpc SearchVideosX (VideoListXRequest) returns (VideoListXReply) {}

  rpc GetHeadersX (VideoHeaderXRequest) returns (VideoHeaderXReply) {}
}


message VideoListXRequest {
  string filter = 1;
}
message VideoListXReply {
  repeated VideoListXModel VideoListX = 1;
}
message VideoListXModel {
  int32  ID = 1;
  string Name = 2;
  string Description = 3;
  string Picture = 4;
  string Category = 5;
  int32  Views = 6;
}


message VideoHeaderXRequest {
  string filter = 1;
}
message VideoHeaderXReply {
  repeated VideoHeaderXModel VideoHeaderX = 1;
}
message VideoHeaderXModel {
  int32  ID = 1;
  int32  ID_VIDEO = 2;
  string Name = 3;
  string Description = 4;
  string Picture = 5;
}
